<resources>

    <string name="app_name">Reflection</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_profile">Profile</string>
    <string name="action_cart">Cart</string>
    <string name="action_home">Home</string>
    <string name="logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="made">Made</string>
    <string name="miss">Miss</string>
    <string name="dismiss">Dismiss</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
        <string name="title_activity_settings">Settings</string>
    <string name="feet_250">Day</string>
    <string name="feet_1000">Week</string>
    <string name="feet_4000">Month</string>
        <string name="facebook_id">684920414900634</string>
    <string name="search_distance">Reflect Once a</string>
        <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="ttp">TTP</string>
    <string name="mm">Make/Miss</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="start">Start Hunt</string>
    <string name="paint">Paint</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">An app using</string>
    <string name="parse">Parse</string>
    <string name="slogan">Scavenger Hunt</string>
    <string name="description"></string>
    <string name="home_des">home screen description graphics etc</string>
    <string name="create">Create</string>
    <string-array name="clue_array">
        <item>Text</item>
        <item>Photo</item>
        <item>GPS</item>
    </string-array>
    <string-array name="dif_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
        <string name="insert_clue">Insert clue string</string>
        <string name="submit">Submit</string>
        <string name="save_button_text">Save</string>
        <string name="save">Save</string>
        <string name="clue_title">Insert Clue Title</string>
        <string name="verify">Verify</string>
        <string name="send">Send GPS Location</string>
        <string name="fb">Login with Facebook</string>
        <string name="enterCode">Enter Access Code</string>
        <string name="action_new_clue">New Clue</string>
        <string name="back">Back</string>
        <string name="what">Describe your photo...</string>
        <string name="moderator">Moderator Login</string>
        <string name="howTO">How To use this app.....</string>
        <string name="sub">One day your reflection will come back</string>
        <string name="quote">\"If this view becomes nothing new to you. Just remember once it was beautiful\"</string>
</resources>
