<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
     xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home" 
        android:title="@string/action_home" 
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom"  /> 

    <item 
        android:id="@+id/action_profile" 
        android:title="@string/action_profile" 
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="never"/>
    
    <item 
        android:id="@+id/action_logout" 
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
    <item 
        android:id="@+id/action_cart" 
        android:title="@string/miss" 
        android:icon="@drawable/ic_action_collection"
        app:showAsAction="ifRoom"/>

     <item 
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_action_settings"
         app:showAsAction="never" />


</menu>