<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

           <ui.TextViewRobotoRegular
                android:id="@+id/ttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="3dip"
                android:text="@string/ttp" />
           <ui.TextViewRobotoRegular
                android:id="@+id/makeMiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="3dip"
                android:text="@string/mm" />
           <ui.TextViewRobotoRegular
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="3dip"
                android:text="@string/x" />
          <ui.TextViewRobotoRegular
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingLeft="3dip"
                android:text="@string/y" />
         <ImageButton
	        android:id="@+id/lvDelete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:gravity="right"
	        android:src="@android:drawable/ic_menu_delete" />
</LinearLayout>