<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="84dp"
        android:text="@string/cancel_button_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_button"
        android:layout_alignParentLeft="true"
        android:text="@string/save" />

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_button"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_action_photo" />

    <com.parse.ParseImageView
        android:id="@+id/clue_preview_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_above="@+id/save_button"
        android:layout_below="@+id/clueTitle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/what" />

    <EditText
        android:id="@+id/clueTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:ems="10" />

</RelativeLayout>