<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <Spinner
	    android:id="@+id/clues_spinner"
	    android:layout_below="@+id/clueTitle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />

        
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="84dp"
        android:text="@string/cancel_button_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_button"
        android:layout_alignParentLeft="true"
        android:text="@string/save" />

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_button"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_action_photo" />
    
        <com.parse.ParseImageView
        android:id="@+id/clue_preview_image"
        android:layout_below="@+id/clueString"
        android:layout_above="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />

        <EditText
            android:id="@+id/clueString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/clues_spinner"
            android:ems="10"
            android:hint="@string/insert_clue" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/clues_spinner"
            android:layout_below="@+id/clues_spinner"
            android:layout_alignParentLeft="true"
            android:text="TextView" />

        <EditText
            android:id="@+id/clueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/clue_title" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/dif_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/clue_preview_image" />

</RelativeLayout>