<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/clueTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/clue_title" />

            <EditText
                android:id="@+id/clueString"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:ems="10"
                android:hint="@string/insert_clue" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/prev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="" />

            <com.parse.ParseImageView
                android:id="@+id/clue_preview_image"
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="84dp"
                    android:text="@string/cancel_button_text" />

                <ImageButton
                    android:id="@+id/photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_photo" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

            </LinearLayout>

            <Spinner
                android:id="@+id/dif_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/clues_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>